--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=tcp:192.168.15.128,1433;Database=master;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=Yes"
   },
+  "Smtp": {
+    "Server": "http://localhost",
+    "Port": 1025,
+    "FromAddress": "store@app.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
