finalizando serviço e adicionar disparo de emails

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:192.168.15.128,1433;Database=master;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=Yes"
+    "DefaultConnection": "Data Source=tcp:localhost,1433;Database=master;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=Yes"
   },
   "Smtp": {
     "Server": "http://localhost",
