--- a/Store.csproj
+++ b/Store.csproj
@@ -32,6 +32,7 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
 	  <PackageReference Include="Moq" Version="4.20.70" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+	  <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="xunit" Version="2.7.1" />
 	</ItemGroup>
